--- a/tests/src/Interactive/index.html
+++ b/tests/src/Interactive/index.html
@@ -1,6 +1,11 @@
+<!doctype html>
+<html>
+<body>
 <h1>Interactive Tests</h1>
 
 <ul>
     <li><a href="/monitor.html">Live Monitor</li>
     <li><a href="/Chart.php">Chart</a></li>
 </ul>
+</body>
+</html>
