--- a/tests/src/Interactive/monitor.html
+++ b/tests/src/Interactive/monitor.html
@@ -7,12 +7,28 @@
 <body>
 
 <h1>LuckByDice</h1>
-<h2>Rolling 10d12</h2>
+<h2>Rolling <span id="notationDisplay">10d12</span>...</h2>
 <div>
+    <form>
+        <label for="notation"l>Notation</label>
+        <input id="notation" type="text" name="notation" value="10d10"/>
+        <label for="luck"l>Luck</label>
+        <input id="luck" type="number" name="luck" value="0" min="0" max="2500"/>
+        <label for="iterations"l>Iterations</label>
+        <input id="iterations" type="number" name="iterations" value="30" min="1" max="10000"/>
+        <label for="interval"l>Interval</label>
+        <input id="interval" type="number" name="interval" value="5" min="5" max="10000"/>
+    </form>
     <canvas id="turncanvas"></canvas>
 </div>
 
 <script>
+    var notation = "1d20";
+    var luck = 0;
+    var iterations = 2000;
+    var interval = 5000;
+
+    var turnId = 1;
     var chartLive = document.getElementById("turncanvas");
     var turnChart = new Chart(chartLive, {
         type: 'line',
@@ -75,30 +91,43 @@
         }
     });
 
-    var turnId = 1;
-    var luck = 0;
-
     var getData = function() {
+        interval = $('#interval').val();
+        notation = $('#notation').val();
+        luck = $('#luck').val();
+        iterations = $('#iterations').val();
+
         $.ajax({
             type: 'POST',
-            data: { "notation": "10d12", "luck": luck },
+            data: {
+                "notation": notation,
+                "luck": luck,
+                "iterations": iterations
+            },
             dataType: 'json',
             url: 'api/turn.php',
             success: function(turn) {
-                turnChart.data.labels.push(turnId);
-                turnChart.data.datasets[0].data.push(turn.data.total);
-                turnChart.data.datasets[1].data.push(turn.data.min);
-                turnChart.data.datasets[2].data.push(turn.data.max);
-                turnChart.data.datasets[3].data.push(turn.data.luck);
-                turnChart.data.datasets[4].data.push(turn.data.bonus);
-                turnId++;
-                luck = turn.data.luck;
+                for(let i = 0; i < turn.data.length; i++){
+                    turnChart.data.labels.push(turnId);
+                    turnChart.data.datasets[0].data.push(turn.data[i].total);
+                    turnChart.data.datasets[1].data.push(turn.data[i].min);
+                    turnChart.data.datasets[2].data.push(turn.data[i].max);
+                    turnChart.data.datasets[3].data.push(turn.data[i].luck);
+                    turnChart.data.datasets[4].data.push(turn.data[i].bonus);
+                    luck = turn.data[i].luck;
+
+                    turnId++;
+                }
+
+                $('#luck').val(luck);
+                $('#notationDisplay').text(notation);
+
                 turnChart.update();
             }
         });
     };
 
-    setInterval(getData, 100);
+    setInterval(getData, interval);
 </script>
 </body>
 </html>
