Move interactive tests to public for fargate cluster

--- a/public/test.html
+++ b/public/test.html
@@ -105,7 +105,7 @@
                 "iterations": iterations
             },
             dataType: 'json',
-            url: 'api/turn.php',
+            url: 'index.php',
             success: function(turn) {
                 for(let i = 0; i < turn.data.length; i++){
                     turnChart.data.labels.push(turnId);
